Fix/add overflow-y-auto to main container in PageBuilder.vue

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -400,7 +400,6 @@
 /* CSS for content inside page builder # start */
 #pagebuilder {
   position: relative;
-  overflow-y: auto;
 }
 #pagebuilder a {
   pointer-events: none;
